syntax = "proto3";

package enums.proto3;

message MessageWithEnum {
  int32 id = 1;
  TestEnum test_enum = 2;
  AliasedEnum aliased_enum = 3;
  NestedEnum nested_enum = 4;

  enum NestedEnum {
    NESTED_FOO = 0;
    NESTED_BAR = 1;
    NESTED_BAZ = 2;
  }
}

enum TestEnum {
  FOO = 0;
  BAR = 1;
  BAZ = 2;
  TOP = 100;
  NEG = -1;  // Intentionally negative.
}

enum AliasedEnum {
  option allow_alias = true;

  ALIAS_FOO = 0;
  ALIAS_BAR = 1;
  ALIAS_BAZ = 2;
  QUX = 2;
  qux = 2;
  bAz = 2;
}
